# typing

./: .gitignore  Cargo.toml  build.js  index.css  index.js  package.json  readme.md  tsconfig.json  typing_lib_bg.wasm
.github/workflows/: deploy.yml  release.yml
examples/: iroha.ntq  五十音.ntq
layouts/: japanese.json  qwerty.json
src/fonts/: ZhiMangXing-OFL.txt
src/rust/: gui.rs  jsapi.rs  lib.rs  main.rs  model.rs  msg.rs  parser.rs  textrender.rs  timestamp.rs  typing.rs  update.rs
src/web/: api.js  api.ts  cdom.ts  index.css  index.html  index.ts  layout.js  tsrust_lib.js
