[package]
name = "neknaj_typing"
version = "25.4.7"
edition = "2021"
authors = ["Neknaj","Bem130"]
license = "MIT"

[package.metadata]
path = "src/rust/main.rs"

[dependencies]
wasm-bindgen = { version = "0.2.100", features = ["serde-serialize"] , optional = true}
wasm-bindgen-futures = "0.4"
serde = { version = "1.0", features = ["derive","rc"] }
serde_json = "1.0"
serde-wasm-bindgen = "0.6.5"
egui = "0.31.0"
egui_extras = "0.31.1"
epaint = "0.31.0"
eframe = { version = "0.31.1", features = ["glow", "web_screen_reader"] }
emath = "0.31.1"
image = "0.25"
js-sys = "0.3"
web-sys = { version = "0.3", features = [
    'Document',
    'Element',
    'HtmlCanvasElement',
    'Window'
], optional = true }
console_error_panic_hook = { version = "0.1.7", optional = true }
rfd = "0.15.3"
lazy_static = "1.4"
winit = "0.29"

[[bin]]
name = "typing_gui"
path = "src/rust/main.rs"

[lib]
name = "typing_lib"
crate-type = ["cdylib"]
path = "src/rust/lib.rs"

[features]
default = ["native"]
web = ["wasm-bindgen", "web-sys", "console_error_panic_hook"]
native = []